# gl-practice-hs

./: README.md  gl-practice-hs.cabal
src/: Main.hs
src/Programs/: Atom.hs  GLRect.hs  GLRectAnimated.hs  LStipple.hs  LStrips.hs  Lines.hs  LinesW.hs  PStipple.hs  Perspect.hs  Points.hs  Pointsz.hs  Scissor.hs  Simple.hs  Sphereworld.hs  Star.hs  Stencil.hs  Triangle.hs
