name: gl-practice-hs
version: 0.1.0
license-file: LICENSE
author: Braden Walters
maintainer: vc@braden-walters.info
category: Graphics.OpenGL.Practice
build-type: Simple
cabal-version: >= 1.10

executable gl-practice-hs
  main-is: Main.hs
  build-depends:
      base >= 4 && < 5
    , gl >= 0.7.7
    , OpenGL >= 2.13
    , GLUT >= 2.7.0
    , GLURaw >= 2.0
    , StateVar >= 1.1.0
    , unordered-containers >= 0.2.5 && < 0.2.6
    , random == 1.1
    , linear == 1.20.*
    , lens == 4.13.*
  hs-source-dirs: src
  default-language: Haskell2010
